[tool.poetry]
name = "telegram-logger"
version = "0.1.0"
description = "Telegram chat logger"
authors = ["nyuszika7h <nyuszika7h@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nyuszika7h/telegram-logger"

[tool.poetry.dependencies]
python = "^3.6"
Telethon = "^1.21.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
